implemented CBT for all four thread